Version 1.1-0 (2016-03-03)

o Added boXM from biotools
o Fleshed out boxM() with formula, lm, plot and summary methods
o added plot.boxM() method
o Added covEllipses() methods for plotting (possibly robust) covariance ellipses
o Added colDevs() as a utility and for use in other multivariate tests.
o Added data(AddHealth), a simple example of a one-way MANOVA with nice views [thx: Russell Warne]


Version 1.0-16 (2015-07-11)
o use importsFrom for base packages

Version 1.0-15 (2015-04-15)
o Fix require -> requireNamespace

Version 1.0-14 (2015-02-15)
o Updated broken urls in documentation
o Removed vcov.mlm from exports to conform to CRAN policies
o Now use rgl:: for rgl functions in *3d.R
o Removed robmlm.default, robmlm.formula from exports
o Imports: rgl


Version 1.0-12 (2014-05-15)
o Removed Authors: to satisfy CRAN nits
o Fixed doc for Hernior.Rd
o Now importsFrom(MASS) rather than Depends:


Version 1.0-11 (2013-08-20)
o Cosmetic changes to pass CRAN checks
o For R 3.1.0, revised vcov.mlm() to avoid calling summary.mlm() directly
o fixed long lines in .Rd files for R 3.0.1 checks
o removed require() calls for MASS & car (Depends:)
o removed ::: calls to car and stats

Version 1.0-10 (2013-06-03)
o Added demo/HE-other.R, exploring other representations of HE plots

Version 1.0-9 (2013-04-19)
o Added Pottery2 data, extending car::Pottery
o Fixed heplot3d to minimize striated rendering of ellipsoids, and also modified default
  colors and fill.alpha

Version 1.0-8 (2013-02-22)
o In heplot.mlm(), added ... to label.ellipse to be able to pass cex=
o Added NLSY data with examples of testing linearHypotheses
o In heplot3d(), rgl.* functions replaced with *3d() equivalents
o Extended gsorth description and examples
 

Version 1.0-7 (2013-02-07)
o Made some heplot3d() examples \dontrun{} to reduce example execution time to satisfy CRAN nits

Version 1.0-6 (2013-01-14)
o Added label.ellipse() as a more general exported function.