@@ -13,6 +13,7 @@ boxM.default <- function(Y, group, ...)
       stop("incompatible dimensions!")
 
    Y <- as.matrix(Y)
+   gname <- deparse(substitute(group))
    group <- as.factor(as.character(group))
 
    valid <- complete.cases(Y, group)
@@ -56,7 +57,7 @@ boxM.default <- function(Y, group, ...)
          parameter = c(df = dfchi),
          p.value = pval,
          cov = mats, pooled = pooled, logDet = logdet, means = means, df=df,
-         data.name = dname,
+         data.name = dname, group = gname,
          method = "Box's M-test for Homogeneity of Covariance Matrices"
          ),
       class = c("htest", "boxM")
@@ -96,38 +97,46 @@ boxM.lm <- function(Y, ...) {
 
 summary.boxM <- function(object, 
                          digits = getOption("digits"),
-                         cov=FALSE, ...)
+                         cov=FALSE, quiet=FALSE, ...)
 {
-  cat("Summary for Box's M-test of Equality of Covariance Matrices\n\n")
-  
-  cat("Chi-Sq:\t", object$statistic, "\n")
-  cat("df:\t", object$parameter, "\n")
-  fp <- format.pval(object$p.value, digits = max(1L, digits - 3L))
-  cat("p-value:", fp, "\n\n")
-  
-  cat("log of Covariance determinants:\n")
-  print(object$logDet, digits=digits)
-  
+
   covs <- c(object$cov, pooled=list(object$pooled))
   eigs <- sapply(covs, FUN=function(x) eigen(x)$values)
   rownames(eigs) <- 1:nrow(eigs)
-  cat("\nEigenvalues:\n")
-  print(eigs, digits=digits)
   
-  cat("\nStatistics based on eigenvalues:\n")
   eigstats <- rbind(
     product = apply(eigs, 2, prod),
     sum = apply(eigs, 2, sum),
     precision = 1/apply(1/eigs, 2, sum),
     max = apply(eigs, 2, max)
   )
-  print(eigstats, digits=digits)	
-  
-  if (cov) {
-    cat("\nCovariance matrices:\n")
-    print(object$cov, digits=digits)
-    cat("\nPooled:\n")
-    print(object$pooled, digits=digits)
+
+  if (!quiet) {
+    cat("Summary for Box's M-test of Equality of Covariance Matrices\n\n")
     
+    cat("Chi-Sq:\t", object$statistic, "\n")
+    cat("df:\t", object$parameter, "\n")
+    fp <- format.pval(object$p.value, digits = max(1L, digits - 3L))
+    cat("p-value:", fp, "\n\n")
+    
+    cat("log of Covariance determinants:\n")
+    print(object$logDet, digits=digits)
+    
+    cat("\nEigenvalues:\n")
+    print(eigs, digits=digits)
+    
+    cat("\nStatistics based on eigenvalues:\n")
+    print(eigstats, digits=digits)	
+    
+    if (cov) {
+      cat("\nCovariance matrices:\n")
+      print(object$cov, digits=digits)
+      cat("\nPooled:\n")
+      print(object$pooled, digits=digits)
+      
+    }
   }
+  ret <- list(logDet=object$logDet, eigs=eigs, eigstats=eigstats)
+  if (cov) ret <- c(ret, cov=list(covs))
+  invisible(ret)
 }
