@@ -6,6 +6,8 @@ o added plot.boxM() method
 o Added covEllipses() methods for plotting (possibly robust) covariance ellipses
 o Added colDevs() as a utility and for use in other multivariate tests.
 o Added data(AddHealth), a simple example of a one-way MANOVA with nice views [thx: Russell Warne]
+o summary.boxM() now returns the calculated statistics and can be used to construct other kinds of plots.
+o plot.boxM() gets a gplabel argument to provide a label for the group factor
 
 
 Version 1.0-16 (2015-07-11)
